# ruler

./: .gitattributes  .gitignore  INSTALL  INSTALL.WINDOWS  LICENSE  Makefile  Makefile.am  README  autogen.sh  configure.ac  main.c  ruler  test.patch
src/: Makefile.am  arguements.c  arguements.h  arguments.c  arguments.h  background.c  background.h  color.c  color.h  common.h  default.h  display.c  display.h  events.c  events.h  extern-c-helper.h  help.c  help.h  imgmode.h  log_helper.c  log_helper.h  main.c  nonportable_windows.c  nonportable_windows.h  render.c  render.h  runtime.h  settings.c  settings.h  shortcuts.c  shortcuts.h  str_utils.c  str_utils.h  version.c  version.h  window.c  window.h
src/tinyfd/: Makefile.am
